--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
     <main>
       <div class="box_actualisation">
         <img src="./images/circle animation.png" alt="#" />
-        <p class="content_actualisation">Derniere Actualisation 23:59</p>
+        <p class="content_actualisation">
+          Derniere Actualisation <span id="hour"></span>
+        </p>
       </div>
       <div class="box_action">
         <div class="box_action_title">
@@ -67,46 +69,47 @@
             <img src="./images/Dollar Icon.png" alt="#" />
             <div class="box_indice">
               <p class="indice">EUR/USD</p>
-              <p class="pourcentage_hausse">1.0685 $</p>
+              <p class="pourcentage_hausse" id="usd">1.0685 $</p>
             </div>
           </div>
           <div class="box_card">
             <img src="./images/Canadian Dollar Icon.png" alt="#" />
             <div class="box_indice">
               <p class="indice">EUR/CAD</p>
-              <p class="pourcentage_hausse">1.45 $CAD</p>
+              <p class="pourcentage_hausse" id="cad">1.45 $CAD</p>
             </div>
           </div>
           <div class="box_card">
             <img src="./images/Libra Icon.png" alt="#" />
             <div class="box_indice">
               <p class="indice">EUR/GBP</p>
-              <p class="pourcentage_hausse">0.89 £</p>
+              <p class="pourcentage_hausse" id="gbp">0.89 £</p>
             </div>
           </div>
           <div class="box_card">
             <img src="./images/Yen Icon.png" alt="#" />
             <div class="box_indice">
               <p class="indice">EUR/JPY</p>
-              <p class="pourcentage_hausse">145,17 Yen</p>
+              <p class="pourcentage_hausse" id="jpy">145,17 Yen</p>
             </div>
           </div>
           <div class="box_card">
             <img src="./images/Won Icon.png" alt="#" />
             <div class="box_indice">
               <p class="indice">EUR/CNY</p>
-              <p class="pourcentage_hausse">7,40 Yuan</p>
+              <p class="pourcentage_hausse" id="cny">7,40 Yuan</p>
             </div>
           </div>
           <div class="box_card">
             <img src="./images/Bitcoin Icon.png" alt="#" />
             <div class="box_indice">
               <p class="indice">Bitcoin</p>
-              <p class="pourcentage_hausse">20 992,97 Euro</p>
+              <p class="pourcentage_hausse" id="btc">20 992,97 Euro</p>
             </div>
           </div>
         </div>
       </div>
     </main>
+    <script src="app.js"></script>
   </body>
 </html>
